--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,12 +46,19 @@ android {
 }
 
 dependencies {
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    api(Android.coreKtx)
+    api(Android.appcompat)
+    api(Android.material)
+    api(Android.constraintlayout)
 
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    api(Android.multidex)
+
+    api(ThirdParty.rxjava)
+    api(ThirdParty.rxAndroid)
+
+    api(ThirdParty.smart.smart)
+    api(ThirdParty.smart.head)
+
+    api(ThirdParty.easypermissions)
 }
